welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: not found: type boolean
var test:boolean = false
         ^SlugTracking:12: error: type mismatch;
 found   : Unit
 required: Boolean
    while (!(test))
    ^